# SecondBrain

./: .gitignore  Jenkinsfile  README.md  package.json  pnpm-lock.yaml
knowledge-graph-service/: .dockerignore  .env-example  Dockerfile  Dockerfile.kgservice.dev  Dockerfile.worker  README.md  docker-compose-test-kgservice.yml  docker-compose.kgservice.yml  main.py  pyproject.toml  requirements.txt  worker.py
knowledge-graph-service/app/: __init__.py
knowledge-graph-service/app/api/: __init__.py
knowledge-graph-service/app/core/: __init__.py  config.py  constants.py
knowledge-graph-service/app/crud/: __init__.py  note.py
knowledge-graph-service/app/db/: __init__.py  init_db.py  neo4j_client.py
knowledge-graph-service/app/schemas/: __init__.py  agents.py  event.py  graph.py  note.py
knowledge-graph-service/app/services/: agent_search_service.py  embedding_service.py  external_service.py  graph_service.py  note_summarize_service.py  rabbitmq_service.py  similarity_service.py
knowledge-graph-service/app/workers/: __init__.py  note_consumer.py
knowledge-graph-service/docs/: project-spec.md
knowledge-graph-service/scripts/: demo_data.py  index.html
knowledge-graph-service/tests/: test_api.py  test_crud.py  test_graph_api.py  test_graph_image.py  test_note_summarize_service.py  test_similarity_service.py
knowledge-graph-service/tests/agent-test/: test_generate_response.py  test_prefilter_agent.py  test_relevance.py  test_similarity_search_node.py  test_simple_lookup.py
knowledge-graph-service/tests/worker-test/: check_config.py  test_event_schemas.py  test_rabbitmq_connection.py  (+2 more)
(+518 files in other folders)
