[project]
name = "knowledge-graph-service"
version = "1.0.0"
description = "Neo4j 기반 지식 그래프 서비스"
requires-python = ">=3.13"

# 프로덕션 의존성
dependencies = [
    "fastapi==0.120.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "neo4j==5.26.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "httpx==0.27.2",
    "pika==1.3.2",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "openai>=2.7.1",
    "tiktoken>=0.12.0",
    "langchain-openai>=1.0.2",
    "langchain-core>=1.0.3",
    "trafilatura>=2.0.0",
    "ipython>=9.7.0",
]

# 개발 의존성
[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
